--- a/app/src/main/res/layout/card_unsuccessful.xml
+++ b/app/src/main/res/layout/card_unsuccessful.xml
@@ -214,7 +214,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:drawablePadding="10dp"
-                android:text="@string/payment_company"
+                android:text="@string/payAt"
                 android:textAlignment="center"
                 android:textColor="@color/darkGray"
                 android:textDirection="ltr"
