--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -187,7 +187,7 @@
                     android:layout_height="0dp"
                     android:layout_weight="1"
                     android:paddingTop="10dp"
-                    android:text="@string/payment_company" />
+                    android:text="@string/payAt" />
 
 
             </LinearLayout>
