--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -128,6 +128,7 @@
                 android:text="@string/travel_category" />
 
             <Spinner
+                android:id="@+id/vehicle_spin"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_gravity="end"
