--- a/app/src/main/res/values/string.xml
+++ b/app/src/main/res/values/string.xml
@@ -121,6 +121,22 @@
     <string name="user_location_permission_not_granted">برای ادامه ی مراحل لطفا مکان یاب خود را روشن کنید!</string>
     <string name="exit">خروج</string>
 
+    <!-- exception messages    -->
+    <string name="exp_null">عملیات با خطا مواجه شد</string>
+    <string name="exp_connection">خطا در برقراری ارتباط</string>
+    <string name="exp_update_location_stopped">مکان یابی متوقف شد!</string>
+    <string name="exp_location_setting">مکان یاب دستگاه خاموش است</string>
+    <string name="exp_invalid_phone">شماره تلفن وارد شده صحیح نمی باشد</string>
+    <string name="exp_wrong_code">کد فعالسازی وارد شده اشتباه است</string>
+    <string name="exp_wrong_phone">شماره همراه وارد شده صحیح نیست</string>
+    <string name="exp_law">لطفا قوانین و مقررات را تایید کنید</string>
+    <string name="exp_anonymous">از حساب کاربری خود خارج شوید </string>
+    <string name="exp_null_doc">مدارک به درستی ارسال نشده است</string>
+    <string name="exp_gallery">انتخاب عکس با خطا مواجه شد</string>
+
+    <!-- success messages    -->
+    <string name="success_code">کد فعالسازی با موفقیت ارسال شد</string>
+
     <string-array name="hour_arrays">
         <item>01</item>
         <item>02</item>
