--- a/app/src/main/res/layout/activity_finance.xml
+++ b/app/src/main/res/layout/activity_finance.xml
@@ -156,7 +156,7 @@
                 android:id="@+id/recycler_finance"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical" />
+                android:orientation="horizontal" />
         </ScrollView>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
